--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h2{
 .container {
     display: flex;
     /* width: 90%; */
-    /* margin: 0 10%; 上下のマージンは0、左右は全体幅の10% */
+    margin: 0 10%;
 }
 
 .main-content {
@@ -39,7 +39,7 @@ h2{
 .sidebar {
     /* width: 150px; サイドバーの幅を200pxに設定 */
     width: 20%;
-    /* padding: 10px; パディングを設定 */
+    padding: 0px 10px;
     background-color: #edf6ff; /* サイドバーの背景色 */
 }
 
