--- a/style.css
+++ b/style.css
@@ -28,8 +28,9 @@ h2{
 }
 
 .main-content {
-    flex-grow: 1; /* メインコンテンツが残りのスペースを取るように設定 */
-    padding: 0px 20px; /* パディングを設定 */
+    /* flex-grow: 1; */
+    padding: 0px 20px;
+    margin-left: 220px;
 }
 
 .main-content ul {
@@ -38,7 +39,10 @@ h2{
 
 .sidebar {
     /* width: 150px; サイドバーの幅を200pxに設定 */
-    width: 20%;
+    position: fixed;
+    width: 200px;
+    height: 100%;
+    overflow-y: auto;
     padding: 0px 10px;
     background-color: #edf6ff; /* サイドバーの背景色 */
 }
@@ -55,4 +59,16 @@ h2{
 .sidebar a {
     text-decoration: none; /* 下線を消す */
     color: black;
+}
+
+@media (max-width: 600px) {
+    .sidebar {
+        position: static;
+        width: 100%;
+        height: auto;
+    }
+
+    .main-content {
+        margin-left: 0;
+    }
 }
