--- a/style.css
+++ b/style.css
@@ -18,7 +18,13 @@ h2{
 }
 
 .header-container {
-    margin: 0 10%; /* 上下のマージンは0、左右は全体幅の10% */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 120px;
+    margin: 0 10%;
+    background-color: white;
 }
 
 .container {
@@ -30,6 +36,7 @@ h2{
 .main-content {
     /* flex-grow: 1; */
     padding: 0px 20px;
+    margin-top: 120px;
     margin-left: 220px;
 }
 
@@ -41,8 +48,9 @@ h2{
 .sidebar {
     /* width: 150px; サイドバーの幅を200pxに設定 */
     position: fixed;
+    top: 120px;
     width: 200px;
-    height: 100%;
+    height: calc(100%-120px);
     overflow-y: auto;
     padding: 0px 10px;
     background-color: #edf6ff; /* サイドバーの背景色 */
